[build-system]  # Setuptools + editable install
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3"]
build-backend = "setuptools.build_meta"


[project]
name = "repo-stats"
version = "0.1.0"
dependencies = [
    "pandas"
]

[project.optional-dependencies]
dev = ["ipython"]
[tool.setuptools]
packages = []