[build-system]  # Setuptools + editable install
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3"]
build-backend = "setuptools.build_meta"


[project]
name = "repo-stats"
version = "0.2.0"
dependencies = [
    "pandas",
    "condastats",
    "pypistats",
    "launchpadlib"
]

[project.optional-dependencies]
dev = ["ipython", "isort"]
[tool.setuptools]
packages = []