[build-system]  # Setuptools + editable install
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3"]
build-backend = "setuptools.build_meta"


[project]
name = "repo-stats"
version = "0.2.0"
dependencies = [
    "pandas<2.0.0",
    "condastats",
    "pypistats",
    "launchpadlib"
]

[project.optional-dependencies]
dev = ["ipython", "isort"]

[project.scripts]
repo-stats = "script:main"

[tool.setuptools]
py-modules = ["script"]